fixtures/errors/continue_to_non_loop_label.js
outer: {
  console.log("hi");
  continue outer;
}
