fixtures/errors/continue_to_non_loop_label.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: cannot continue to non-loop label `outer`
 --> errors/continue_to_non_loop_label.js:3:3
3 |   continue outer;
  |   ^^^^^^^^^^^^^^^

